--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Pop Movies</string>
     <string name="action_settings">Settings</string>
+    <string name="mdbApiKey">3b0f2adc01e2e325c60ec5faccb91cfe</string>
 </resources>
