--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Pop Movies</string>
     <string name="action_settings">Settings</string>
     <string name="mdbApiKey">3b0f2adc01e2e325c60ec5faccb91cfe</string>
+    <string name="base_URL"> http://image.tmdb.org/t/p/</string>
+    <string name="thumb_size">w342</string>
 </resources>
